# chester

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
android/ChesterApp/: .gitignore
android/ChesterApp/app/: CMakeLists.txt  build.gradle
android/ChesterApp/app/src/main/: AndroidManifest.xml
android/ChesterApp/app/src/main/cpp/: native-lib.cpp
android/ChesterApp/app/src/main/java/com/chester/chesterapp/: ChesterView.java  FileDialog.java  MainActivity.java
android/ChesterApp/app/src/main/res/layout/: activity_main.xml
android/ChesterApp/app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml
android/ChesterApp/gradle/wrapper/: gradle-wrapper.properties
src/: cpu.c  cpu.h  cpu_inline.h  gpu.c  gpu.h  interrupts.c  interrupts.h  keys.c  keys.h  loader.c  loader.h  main.c  mmu.c  mmu.h  sync.c  sync.h  timer.c
src/app/: CMakeLists.txt  main.c
src/lib/: CMakeLists.txt  chester.c  chester.h  chester_internal.h  cpu.c  cpu.h  cpu_inline.h  gpu.c  gpu.h  interrupts.c  keys.c  keys.h  loader.c  loader.h  logger.c  logger.h  memory_inline.h  mmu.c  mmu.h  rtc.c  rtc.h  save.c  save.h  sync.c  sync.h  timer.c  timer.h
tests/: CMakeLists.txt  CMakeLists.txt.in  blarggs-tests.cpp  gekkios-tests.cpp  test-runner.cpp  test-runner.hpp
